--- a/Resume.html
+++ b/Resume.html
@@ -25,8 +25,8 @@
           
         <ol>
 
-               <li>high school student</li>
-               <li>information system university of KSU</li>
+               <li>change 1</li>
+               <li>change 2</li>
 
 
       </ol>
