--- a/Resume.html
+++ b/Resume.html
@@ -26,7 +26,8 @@
         <ol>
 
                <li>change 1</li>
-               <li>change 2</li>
+               <li>num 2</li>
+               hello
 
 
       </ol>
