--- a/Resume.html
+++ b/Resume.html
@@ -35,7 +35,7 @@ kijkjk
         <h2>Skills</h2>
           <li>coding</li>
           <li>problem solving</li>
-         <li>DB managment</li>
+         <li>running</li>
 
       </ul>
 
