--- a/Resume.html
+++ b/Resume.html
@@ -32,7 +32,7 @@
 kijkjk
       </ol>
       <ul>
-        <h2>Skills</h2>
+        <h2>hello</h2>
           <li>coding</li>
           <li>problem solving</li>
          <li>running</li>
