--- a/Resume.html
+++ b/Resume.html
@@ -25,7 +25,7 @@
           
         <ol>
 
-               <li>change 1</li>
+               <li>change 1.</li>
                <li>num 2</li>
                hello
 
